# jansfortrankernel

./: LICENSE  README.md  pyproject.toml
example/: example.ipynb
jansfortrankernel/: kernel.json
src/jansfortrankernel/: __init__.py  __main__.py  install_kernelspec.py  kernel.py
